# cardcore-poker

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  index.html  justfile  multiplayer-test.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.junie/plans/: add-blackjack.md
frontend/: .gitignore  DESIGN.md  README.md
frontend/server/: index.js
frontend/src/components/: GameRoom.svelte
goose-design/: index.html  package-lock.json  package.json  test-wasm.mjs  vite.config.js
goose-design/public/: oauth-client-metadata.json
goose-design/server/: index.js
goose-design/src/: App.svelte  test-oauth.js
goose-design/src/components/: ActionBar.svelte  Card.svelte  GameRoom.svelte  Lobby.svelte  PlayerSeat.svelte  PokerTable.svelte  SignIn.svelte
pkg/: README.md  cardcore_poker.d.ts  cardcore_poker.js  cardcore_poker_bg.wasm  cardcore_poker_bg.wasm.d.ts  package.json
src/: agent.rs  agent_util.rs  card.rs  crypto.rs  engine.rs  error.rs  eval.rs  game.rs  lib.rs  protocol.rs  sim.rs  wasm.rs
src/blackjack/: agent.rs  eval.rs  game.rs  mod.rs  protocol.rs
src/lexicon/: mod.rs  re_cardco.rs
tests/: agent.rs  blackjack_agent.rs  blackjack_integration.rs  cbor.rs  integration.rs  sim.rs  wasm_browser.rs
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
web-src/: App.tsx  Card.tsx  PokerTable.tsx
web-tests/: game.spec.ts
web/src/: EventLog.tsx  PlayerSeat.tsx  useSimulation.ts
(+33 files in other folders)
