[package]
name = "cardcore-poker"
version = "0.1.0"
edition = "2024"

[dependencies]
libsodium-sys-stable = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
rand = "0.9"

[[bin]]
name = "poker"
path = "src/bin/poker.rs"
